--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <header class="aaa">
+  <header class="header">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
       </a>
   </header>
-  <div class="centered-main-page-element">
-    <p id="top-section=for-adding-element-to-list">
+  <div class="main">
+    <p>
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
+      <div class="task-row">
+        <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
     </p>
