--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       </a>
   </header>
   <div class="main">
-    <p>
+    <section class="section">
       <label for="new-task">Add Item</label>
       <div class="task-row">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
-    </p>
+    </section>
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
       <li>
