--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="section">
   <header class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
       </a>
@@ -28,7 +28,7 @@
         <input type="text">
         <button class="edit">Edit</button>
         <button class="delete">
-        <img src="./remove.svg">
+        <img src="./remove.svg" alt="Remove button">
         </button>
       </li>
       <li class="edit-mode">
@@ -37,7 +37,7 @@
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove button">
         </button>
       </li>
     </ul>
@@ -48,7 +48,7 @@
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img src="./remove.svg" alt="Remove button"></button>
       </li>
     </ul>
   </div>
